--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"homepage": "https://kfill420.github.io/Todolist",
 	"name": "react-modele-vite",
 	"private": true,
 	"version": "0.0.0",
@@ -8,10 +9,13 @@
 		"build": "tsc && vite build",
 		"preview": "vite preview",
 		"lint": "tsc --noEmit && eslint src/**/*.{js,jsx,ts,tsx} --cache --max-warnings=0",
-		"lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix"
+		"lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix",
+		"predeploy": "pnpm build",
+		"deploy": "gh-pages -d build"
 	},
 	"dependencies": {
 		"axios": "^1.6.8",
+		"gh-pages": "^6.1.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-feather": "^2.0.10"
