--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
+		"predeploy": "pnpm build",
+		"deploy": "gh-pages -d dist",
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
 		"lint": "tsc --noEmit && eslint src/**/*.{js,jsx,ts,tsx} --cache --max-warnings=0",
-		"lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix",
-		"predeploy": "pnpm build",
-		"deploy": "gh-pages -d build"
+		"lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix"
 	},
 	"dependencies": {
 		"axios": "^1.6.8",
